[package]
name = "squeeze-vrchat-osc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.1"
futures = "0.3.21"
futures-util = "0.3.21"
rosc = "0.6.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "net", "macros"] }
uuid = "0.8.2"
